--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <meta name="description" content="موقع نادر فهد العتيبي لزخرفة الأسماء الاحترافية 2026. زخرفة ببجي، فري فاير، ورموز نادرة وحروف مميزة.">
+<meta name="keywords" content="زخرفة, زخرفة اسماء, ببجي, نادر فهد العتيبي, رموز نادرة, زخرفة عربي, زخرفة انجليزي, اسماء فخمة, 2026">
+<meta name="author" content="نادر فهد العتيبي">
+
+<meta property="og:title" content="نادر برو 2026 | عالم الزخرفة">
+<meta property="og:description" content="احصل على أفخم الزخارف والرموز النادرة مجاناً.">
+<meta property="og:image" content="رابط_صورة_لوجو_موقعك">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>NADER PRO 2026 | المنصة العالمية</title>
@@ -220,3 +228,11 @@
 
 </body>
 </html>
+<section style="margin-top: 50px; padding: 20px; font-size: 0.8rem; opacity: 0.4; text-align: justify; border-top: 1px solid #222;">
+    <h3 style="font-size: 1rem; color: var(--primary);">لماذا موقع نادر برو للزخرفة؟</h3>
+    <p>
+        يعتبر موقع **نادر فهد العتيبي** للزخرفة هو الأسرع في عام **2026**. نحن نوفر **زخرفة أسماء ببجي** مقبولة، 
+        و**رموز نادرة** لا توجد في لوحات المفاتيح العادية. إذا كنت تبحث عن **زخرفة انجليزي** فخمة أو **حروف عربية مزخرفة** فأنت في المكان الصحيح. الموقع يدعم **زخرفة فري فاير** و**نيكات ألعاب** قوية وحصرية.
+    </p>
+</section>
+
